scrollbar and loading fixed --om -v1

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import "react-quill/dist/quill.snow.css";
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 .scrolling-text {
   @apply overflow-hidden whitespace-nowrap relative;
@@ -125,29 +123,33 @@ code {
 
 .bluegrad {
   background: rgb(3, 61, 215);
-  background: linear-gradient(83deg,
-      rgba(3, 61, 215, 1) 2%,
-      rgba(2, 96, 255, 1) 37%,
-      rgba(0, 212, 255, 1) 100%);
+  background: linear-gradient(
+    83deg,
+    rgba(3, 61, 215, 1) 2%,
+    rgba(2, 96, 255, 1) 37%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
 
 .bg__gradient {
   /* height: 800px;
   width: 800px; */
-  background-image: linear-gradient(90deg,
-      #34ebcc,
-      #34d5eb,
-      #34a8eb,
-      #346beb,
-      #3734eb,
-      #7734eb,
-      #a834eb,
-      #7734eb,
-      #3734eb,
-      #346beb,
-      #34a8eb,
-      #34d5eb,
-      #34ebcc);
+  background-image: linear-gradient(
+    90deg,
+    #34ebcc,
+    #34d5eb,
+    #34a8eb,
+    #346beb,
+    #3734eb,
+    #7734eb,
+    #a834eb,
+    #7734eb,
+    #3734eb,
+    #346beb,
+    #34a8eb,
+    #34d5eb,
+    #34ebcc
+  );
 
   filter: blur(300px);
   border-radius: 100%;
@@ -189,7 +191,7 @@ a {
   color: black;
 }
 
-*::-webkit-scrollbar-track {
+/* *::-webkit-scrollbar-track {
   border-radius: 10px;
 }
 
@@ -201,16 +203,16 @@ a {
 .hor-scroll::-webkit-scrollbar {
   width: 1px;
   height: 1px;
-}
+} */
 
 body {
   color: black;
 }
 
-*::-webkit-scrollbar-thumb {
+/* *::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-color: var(--secondary-color);
-}
+} */
 
 .dlink {
   text-decoration: none !important;
@@ -537,10 +539,12 @@ button:active {
   width: 20px;
   height: 20px;
   background-color: #ff3cac;
-  background-image: linear-gradient(225deg,
-      #ff3cac 0%,
-      #784ba0 50%,
-      #2b86c5 100%);
+  background-image: linear-gradient(
+    225deg,
+    #ff3cac 0%,
+    #784ba0 50%,
+    #2b86c5 100%
+  );
   animation: animateimages 25s linear infinite;
   bottom: -150px;
 }
